Added new titles to nav and body

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
 	<nav>
 		<ul>
-			<li><a href="#background">Background</a></li>
+			<li><a href="#research">Research</a></li>
 			<ul>
-				<li><a href="#research">Research</a></li>
+				<li><a href="#about">About</a></li>
+        <li><a href="#questionnaire">Questionnaire</a></li>
+        <li><a href="#interview">Interviews</a></li>
+        <li><a href="#ethnography">Online ethnographies</a></li>
 				<li><a href="#profiles">User Profiles</a></li>
 			</ul>
 			<li><a href="#ideation">Ideation</a></li>
@@ -37,11 +40,11 @@
 
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 	<main>
-		<section id="background">
+		<section id="research">
 			<h2>Background</h2>
 			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat
 				quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
-			<h3 id="research">Research</h3>
+			<h3 id="about">About</h3>
 			<p>Optio qui, omnis itaque rerum iusto molestiae necessitatibus deleniti quod tenetur id perspiciatis voluptatum dolorum
 				quisquam eius ipsum non architecto labore! Distinctio, tenetur. Officiis, necessitatibus?</p>
 			<!-- Use the figure element for embedding images and iframes with annotations/captions -->
@@ -49,6 +52,15 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/7_sFVYfatXY" frameborder="0" allowfullscreen></iframe>
 				<figcaption>This is a figure containing an iframe for embedding videos.</figcaption>
 			</figure>
+      <h3 id="questionnaire">Questionnaire</h3>
+      <p>Rem iste iure blanditiis excepturi esse nisi corrupti sequi, illo, laborum quo quis quaerat assumenda perspiciatis
+				quod fuga vel laudantium doloribus architecto tempora omnis earum!</p>
+      <h3 id="interview">Interviews</h3>
+      <p>Rem iste iure blanditiis excepturi esse nisi corrupti sequi, illo, laborum quo quis quaerat assumenda perspiciatis
+				quod fuga vel laudantium doloribus architecto tempora omnis earum!</p>
+      <h3 id="ethnography">Online ethnographies</h3>
+      <p>Rem iste iure blanditiis excepturi esse nisi corrupti sequi, illo, laborum quo quis quaerat assumenda perspiciatis
+				quod fuga vel laudantium doloribus architecto tempora omnis earum!</p>
 			<h3 id="profiles">User Profiles</h3>
 			<p>Rem iste iure blanditiis excepturi esse nisi corrupti sequi, illo, laborum quo quis quaerat assumenda perspiciatis
 				quod fuga vel laudantium doloribus architecto tempora omnis earum!</p>
